Set max-width of img in post content to 100% to avoid sidenav overlapping post content in some situations.

--- a/assets/css/post.sass
+++ b/assets/css/post.sass
@@ -70,6 +70,9 @@ main
   strong
     font-weight: bold
 
+  img
+    max-width: 100%
+
 @media only screen and (max-width: 992px)
   #post-info
     h3
